<resources>
    <string name="app_name">Hotel Management</string>


    <!--     Introduction buttons     !-->
    <string name="crear_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>

    <!--     Login and signIn screen     !-->
    <string name="password">Contraseña</string>
    <string name="email">Email</string>
    <string name="forgot_password">Olvidaste la contraseña</string>
    <string name="confirm_password">Confirma contraseña</string>
    <string name="full_name">Nombre completo</string>
    <string name="wrong_email">Estructura de email no valida</string>
    <string name="wrong_password">Contraseña minimo de 6 caracteres</string>

    <!--     Dialog error Login      !-->
    <string name="accept_login">Aceptar</string>
    <string name="title_login">¡Ups!</string>
    <string name="supporting_text_login">Verifica los datos y vuelve a intentarlo :)</string>

    <!--     Dialog error SignIn      !-->
    <string name="accept_sign_in">Aceptar</string>
    <string name="title_sign_in">¡Ups!</string>
    <string name="supporting_text_sign_in">Este correo ya esta registrado</string>

    <!--     TextInput Error     !-->
    <string name="full_name_error">El nombre debe tener almenos 6 caracteres</string>
    <string name="email_error">Email no valido, verifica la estrcutura</string>
    <string name="password_error">Las contraseñas no coinciden</string>
    <string name="confirm_password_error">Las contraseñas no coinciden</string>

    <!--     Top app bar options    !-->
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">cerrar sesion</string>

    <!--     Dialog Close Session      !-->
    <string name="accept_close_session">Aceptar</string>
    <string name="title_close_session">Cerrar sesion</string>
    <string name="supporting_text_close_session">¿Estas seguro de cerrar sesion?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--     Top bar Titles     !-->
    <string name="top_bar_menu">Menú Principal</string>
    <string name="top_bar_balance">Balance</string>
    <string name="top_bar_inventory">Inventario</string>
    <string name="top_bar_add_order">Crear pedido</string>
    <string name="top_bar_current_order">Pedidos en curso</string>



</resources>